--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <li><a href="https://drive.google.com/drive/u/1/folders/1cNd0MOOqkV0xww_aoCFnjJkgd_3dw-PK" target="_blank"><i class="bi bi-file-earmark-text navicon"></i> Technical Education</a></li>
         <li><a href="https://drive.google.com/drive/u/1/folders/1-iCjt3cKeGR3t_CcfBilcG3L2lHoZTCM" target="_blank"><i class="bi bi-images navicon"></i> Technology and Computing</a></li>
         <li><a href="https://drive.google.com/drive/u/1/folders/1mKvzE44t6JZSb456q7PyygttUAlSwpbI" target="_blank"><i class="bi bi-hdd-stack navicon"></i> Vocational Guidance</a></li>
+        <li><a href="https://drive.google.com/drive/u/1/folders/1W9qlDM1g6ltNluBCNi5Ms8bMi_XGp_ye" target="_blank"><i class="bi bi-hdd-stack navicon"></i>2024 STEM Node Planning</a></li>
+        <li><a href="https://drive.google.com/drive/u/1/folders/1hxmy7tbjL0tr7lJfHi_n1M1iHlVaDyMd" target="_blank"><i class="bi bi-hdd-stack navicon"></i>2025 STEM Node Planning </a></li>
         <li><a href="https://drive.google.com/drive/u/1/folders/1zDod6873MjQDFCI36gPozW4n80LH5pX9" target="_blank"><i class="bi bi-hdd-stack navicon"></i> Lesson Plan</a></li>
       </ul>
     </nav>
